Planning - loading z-index & add to load-stops

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1261,7 +1261,7 @@ small {
   right: 0;
   bottom: 0;
   margin: auto;
-  z-index: 1000;
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: center;
